--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -45,7 +45,7 @@
     width: 80px;
     height: 48px;
     overflow: hidden;
-    background-image: url(/assets/images/logo-white.png);
+    background-image: url(https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/logo-white.png);
     text-indent: 101%;
     white-space: nowrap;
     background-size: contain;
