--- a/layout/footer.ejs
+++ b/layout/footer.ejs
@@ -19,9 +19,15 @@
             </div>
             <div class="footer-social">
                 <ul class="d-flex">
-                    <li><a href="#"><img src="/assets/images/ic-social-fb.png" alt="fb"></a></li>
-                    <li><a href="#"><img src="/assets/images/ic_social_ig.png" alt="ig"></a></li>
-                    <li><a href="#"><img src="/assets/images/ic_social_line.png" alt="line"></a></li>
+                    <li><a href="#"><img
+                                src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/ic-social-fb.png"
+                                alt="fb"></a></li>
+                    <li><a href="#"><img
+                                src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/ic_social_ig.png"
+                                alt="ig"></a></li>
+                    <li><a href="#"><img
+                                src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/ic_social_line.png"
+                                alt="line"></a></li>
                 </ul>
             </div>
         </div>
