--- a/layout/footer.ejs
+++ b/layout/footer.ejs
@@ -1,6 +1,6 @@
 <footer class="footer">
     <div class="container-fluid">
-        <div class="d-flex justify-content-between mb-8">
+        <div class="d-flex justify-content-between bottom-border-1 pb-8 mb-8">
             <div>
                 <ul class="footer-nav d-flex">
                     <li><a href="index.html">首頁</a></li>
@@ -31,7 +31,6 @@
                 </ul>
             </div>
         </div>
-        <hr class="mb-8">
 
         <div class="footer-footer d-flex">
             <p>Copyright © 2020 Glasses.All rights reserved.</p>
