--- a/assets/scss/helpers/_helpers.scss
+++ b/assets/scss/helpers/_helpers.scss
@@ -6,6 +6,10 @@
   width: 50%;
 }
 
+.h-100 {
+  height: 100%;
+}
+
 .ms-auto {
   margin-left: auto;
 }
@@ -44,6 +48,10 @@
 
 .mb-20 {
   margin-bottom: 80px;
+}
+
+.pb-8 {
+  padding-bottom: 32px;
 }
 
 .py-20 {
